# vfs

./: CHANGELOG.md  README.md  SKILL.md  cli.py  playground.py  providers.py  pyproject.toml
avm/: __init__.py  advanced.py  agent_memory.py  cli.py  config.py  core.py  daemon.py  embedding.py  fuse_mount.py  graph.py  handlers.py  mcp_server.py  multi_agent.py  node.py  provider.py  refresh.py  retrieval.py  store.py  tell.py  tools.py
avm/providers/: __init__.py  alpaca.py  base.py  http_json.py  indicators.py  memory.py  news.py  watchlist.py
scripts/: scenario_benchmark.py
skill/: SKILL.md  manifest.json
tests/: test_advanced.py  test_daemon.py  test_graph.py  test_node.py  test_store.py  test_tell.py
trading/: providers.py
vfs/: __init__.py  agent_memory.py  cli.py  config.py  core.py  mcp_server.py  permissions.py  store.py
