[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avm"
version = "0.9.0"
description = "AI Virtual Filesystem - structured knowledge access for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Akashi", email = "akashi@openclaw.ai" }
]
keywords = ["ai", "filesystem", "knowledge-graph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
fuse = ["fusepy>=3.0"]

[project.scripts]
avm = "avm.cli:main"
avm-mcp = "avm.mcp_server:main"
avm-mount = "avm.fuse_mount:main"

[tool.hatch.build.targets.wheel]
packages = ["avm"]
